part2/exercise-2.01/log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
        - name: log-reader
          image:  lapalmerjack/log-output-2.01-v1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: logging-svc
spec:
  type: ClusterIP
  selector:
    app: logs
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
