part2/exercise-2.01/ping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep-2.01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: lapalmerjack/pingpong-2.01-v1
          ports:
            - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8083
